# tasmiyah-cli

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: RELEASING.md  USER_GUIDE.md
docs/homebrew/: tasmiyah-cli.rb.tmpl
src/: banner.rs  cli.rs  font.rs  main.rs  phrases.rs  theme.rs  update.rs
src/banner/: art.rs  centered.rs  classic.rs  minimal.rs  mod.rs
tests/: cli.rs
